update environment to include transformers, wandb for experiment tracking, etc.

--- a/conda/environment.yml
+++ b/conda/environment.yml
@@ -12,6 +12,11 @@ dependencies:
   - pytorch
   - black
   - pandas
+  - pip
   - pip:
     - stanza
     - datasets
+    - transformers
+    - wandb
+    - torchmetrics
+    - tqdm
