--- a/configs/multitask/bilstm_multitask.yml
+++ b/configs/multitask/bilstm_multitask.yml
@@ -1,10 +1,11 @@
 # GENERAL
-project_name: "bilstm-apv"
+project_name: "bilstm-multitask"
 random_seed: 42
 test_run: False
 test_run_n_samples: 10
 device: "cuda:0"
 multitask: True
+results_dir: "results"
 
 # MODEL
 architecture: "BiLSTMMultitask"
@@ -17,17 +18,22 @@ start_epoch: 0
 max_epochs: 5
 early_stopping: False
 batch_size: 32
+shuffle: False
+tasks:
+- "regression"
+- "classification"
+- "classification"
+- "classification"
 
 # DATA
-train_data_filepath: "TODO"
-test_data_filepath: "TODO"
+data_filepath: "data/rule_based_annotations.csv"
 num_classes_list:
 - 1
 - 3
 - 3
 - 3
 label_cols:
-- "svo_dist"
+- "svo_dist_norm"
 - "apv"
 - "scv"
 - "hv"
