--- a/configs/singletask/bilstm_classifier_hv.yml
+++ b/configs/singletask/bilstm_classifier_hv.yml
@@ -5,6 +5,7 @@ test_run: False
 test_run_n_samples: 10
 device: "cuda:0"
 multitask: False
+results_dir: "results"
 
 # MODEL
 architecture: "BiLSTMClassifier"
@@ -18,10 +19,11 @@ start_epoch: 0
 max_epochs: 5
 early_stopping: False
 batch_size: 32
+shuffle: False
+task: "classification"
 
 # DATA
-train_data_filepath: "TODO"
-test_data_filepath: "TODO"
+data_filepath: "data/rule_based_annotations.csv"
 num_classes: 2
 label_col: "hv"
 label_description: "hidden verbs"
