--- a/configs/singletask/bilstm_classifier_scv.yml
+++ b/configs/singletask/bilstm_classifier_scv.yml
@@ -1,5 +1,5 @@
 # GENERAL
-project_name: "bilstm-svo_dist"
+project_name: "bilstm-scv"
 random_seed: 42
 test_run: False
 test_run_n_samples: 10
@@ -7,7 +7,7 @@ device: "cuda:0"
 multitask: False
 
 # MODEL
-architecture: "BiLSTMRegressor"
+architecture: "BiLSTMClassifier"
 dim_emb: 256
 dim_hid: 20
 num_layers: 2
@@ -18,14 +18,16 @@ start_epoch: 0
 max_epochs: 5
 early_stopping: False
 batch_size: 32
+shuffle: False
+task: "classification"
+results_dir: "results"
 
 # DATA
-train_data_filepath: "TODO"
-test_data_filepath: "TODO"
-dataset_name: "TODO"
-label_col: "svo_dist"
-label_description: "subject verb object distance"
-label_criterion: "MSELoss"
+data_filepath: "data/rule_based_annotations.csv"
+num_classes: 3
+label_col: "scv"
+label_description: "simplest form of verb(s)"
+label_criterion: "CrossEntropyLoss"
 
 # OPTIMIZER
 optimizer: "ADAM"
