--- a/configs/singletask/bilstm_regressor_svo_dist_norm.yml
+++ b/configs/singletask/bilstm_regressor_svo_dist_norm.yml
@@ -1,13 +1,14 @@
 # GENERAL
-project_name: "bilstm-scv"
+project_name: "bilstm-svo_dist_norm"
 random_seed: 42
 test_run: False
 test_run_n_samples: 10
 device: "cuda:0"
 multitask: False
+results_dir: "results"
 
 # MODEL
-architecture: "BiLSTMClassifier"
+architecture: "BiLSTMRegressor"
 dim_emb: 256
 dim_hid: 20
 num_layers: 2
@@ -18,14 +19,14 @@ start_epoch: 0
 max_epochs: 5
 early_stopping: False
 batch_size: 32
+shuffle: False
+task: "regression"
 
 # DATA
-train_data_filepath: "TODO"
-test_data_filepath: "TODO"
-num_classes: 3
-label_col: "scv"
-label_description: "simplest form of verb(s)"
-label_criterion: "CrossEntropyLoss"
+data_filepath: "data/rule_based_annotations.csv"
+label_col: "svo_dist_norm"
+label_description: "subject verb object distance normalized"
+label_criterion: "MSELoss"
 
 # OPTIMIZER
 optimizer: "ADAM"
