--- a/configs/singletask/bilstm_classifier_hv.yml
+++ b/configs/singletask/bilstm_classifier_hv.yml
@@ -17,14 +17,15 @@ num_layers: 2
 logging_freq: 20
 start_epoch: 0
 max_epochs: 5
-early_stopping: False
+early_stopping: True
+early_stopping_metric: "f1"
 batch_size: 32
 shuffle: False
 task: "classification"
 
 # DATA
-data_filepath: "data/rule_based_annotations.csv"
-num_classes: 2
+data_filepath: "data/train_auto_annotations_UPDATED.csv"
+num_classes: 3
 label_col: "hv"
 label_description: "hidden verbs"
 label_criterion: "CrossEntropyLoss"
