add logging_freq and up max_epochs

--- a/configs/multitask/bilstm_multitask.yml
+++ b/configs/multitask/bilstm_multitask.yml
@@ -15,7 +15,8 @@ num_layers: 2
 
 # TRAINING
 start_epoch: 0
-max_epochs: 5
+max_epochs: 7
+logging_freq: 20
 early_stopping: False
 batch_size: 32
 shuffle: False
