add support for bert regressor; decrease max epochs for non-frozen bert configs; add bert configs

--- a/configs/singletask/bert_classifier_hv.yml
+++ b/configs/singletask/bert_classifier_hv.yml
@@ -1,5 +1,5 @@
 # GENERAL
-project_name: "bert-freeze-apv"
+project_name: "bert-hv"
 random_seed: 42
 test_run: False
 test_run_n_samples: 10
@@ -10,12 +10,12 @@ results_dir: "results"
 # MODEL
 architecture: "BERTClassifier"
 dim_hid: 20
-freeze_pretrained: True
+freeze_pretrained: False
 
 # TRAINING
 logging_freq: 20
 start_epoch: 0
-max_epochs: 40
+max_epochs: 3
 early_stopping: True
 early_stopping_metric: "f1"
 batch_size: 32
@@ -25,7 +25,7 @@ task: "classification"
 # DATA
 data_filepath: "data/rule_based_annotations_old_svo_dist.csv"
 num_classes: 3
-label_col: "apv"
+label_col: "hv"
 label_description: "active/passive voice"
 label_criterion: "CrossEntropyLoss"
 
